--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,24 @@
 <html>
-
+    <head>
+        <title>
+            Article One | Sachin
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <br>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            Sep 29, 2016
+        </div>
+        <div>
+            <p>
+                This is the first article. This is the first article. This is the first article.
+            </p>
+        </div>
+    </body>
 </html>
