[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,24 @@
-
+<html>
+    <head>
+        <title>
+            Article Two | Sachin
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <br>
+        <h3>
+            Article Two
+        </h3>
+        <div>
+            Sep 29, 2016
+        </div>
+        <div>
+            <p>
+                This is the second article. This is the second article. This is the second article.
+            </p>
+        </div>
+    </body>
+</html>
