[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,1 +1,24 @@
-
+<html>
+    <head>
+        <title>
+            Article Three | Sachin
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <br>
+        <h3>
+            Article Three
+        </h3>
+        <div>
+            Oct 12, 2016
+        </div>
+        <div>
+            <p>
+                This is the Third article. This is the Third article. This is the Third article.
+            </p>
+        </div>
+    </body>
+</html>
