--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,22 +4,32 @@
             Article One | Sachin
         </title>
         <meta name="viewport" content="width-device-width, initial-scale=1"/>
+        <style>
+            .container{
+                max-width:800px;
+                margin:0 auto;
+                color:grey;
+                font-family:sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <br>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            Sep 29, 2016
-        </div>
-        <div>
-            <p>
-                This is the first article. This is the first article. This is the first article.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <br>
+            <h3>
+                Article One
+            </h3>
+            <div>
+                Sep 29, 2016
+            </div>
+            <div>
+                <p>
+                    This is the first article. This is the first article. This is the first article.
+                </p>
+            </div>
         </div>
     </body>
 </html>
