[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -27,7 +27,17 @@
             </div>
             <div>
                 <p>
-                    This is the first article. This is the first article. This is the first article.
+                     This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article.
+                </p>
+            </div>
+            <div>
+                <p>
+                     This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article.
+                </p>
+            </div>
+            <div>
+                <p>
+                     This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article. This is the first article.
                 </p>
             </div>
         </div>
