--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,6 +3,7 @@
         <title>
             Article Two | Sachin
         </title>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div>
